# webbench

./: .gitignore  CMakeLists.txt  LICENSE  README.md  go.mod  main.go
bench/: main.py
include/: bench.h  httpRequest.h  socks.h
src/: bench.cpp  httpRequest.cpp  socks.cpp
tests/: test.cpp  test2.cpp
